# concordat

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.MD  README_INTEROP_TS.md  ROADMAP.md  instructions.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/agents/: bridge.agent.md  convergence.agent.md  document.agent.md  interop.agent.md  lattice.agent.md  sentinel.agent.md
.github/workflows/: ci.yml
src/: codec.rs  delta.rs  doc.rs  lib.rs  ormap.rs  register.rs  rga.rs  value.rs  vv.rs  wasm.rs
tests/: integration.rs  unit.rs
tests-ts/: interop.test.mjs  package-lock.json  package.json
tests/integration/: convergence.rs  mod.rs
tests/unit/: codec.rs  delta.rs  doc.rs  mod.rs  ormap.rs  register.rs  rga.rs  value.rs  vv.rs
