[package]
name = "concordat"
version = "0.1.0"
edition = "2024"
description = "Delta-state CRDT JSON library — Strong Eventual Consistency with TypeScript/WASM interop"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pierreg256/concordat"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }

[dev-dependencies]
serde_json = "1"
