[package]
name = "concordat"
version = "0.1.0"
edition = "2024"
description = "Delta-state CRDT JSON library — Strong Eventual Consistency with TypeScript/WASM interop"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pierreg256/concordat"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[dev-dependencies]
serde_json = "1"
